--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "ejs": "~2.5.7",
+    "ejs": "^2.5.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
